fix(transformations): empty states help block spacing

--- a/src/scripts/modules/transformations/react/components/EmptyStateBucket.less
+++ b/src/scripts/modules/transformations/react/components/EmptyStateBucket.less
@@ -11,7 +11,6 @@
   }
   .help {
     color: #717e9a;
-    position: relative;
-    bottom: 0px;
+    padding-top: 30px;
   }
 }
